2009-01-28 fabien
* remove some unused script and refeactor some very similar scripts in a generic one

2009-01-21 fabien
* remove unused field base_amount_list
* change error messages in PaySheetTransaction_checkParameters to be consistant with other translations
* translate a message in PaySheetModelLine_asCellRange

2009-01-16 fabien
* add a checkbox on Pay Sheet Model Line to create or not the related Pay Sheet Line

2009-01-15 fabien
* update bt format
* change the related key because of the changes of uses of base_amount
* Add base_application_list and base_contribution_list fields on PaySheetModelLine_view and remove base_amount on PaySheetModelLine and Payroll services

2008-09-16 Kazuhiko
* revise pay_sheet_transaction_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Pay Sheet Transaction.

2008-09-04 yusei
* Update English messages.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-06-10 jerome
* Add Payroll Taxes Report

2008-06-06 jerome
* Merge skin folders to have only erp5_payroll

2008-03-06 jerome
* API change: PaySheetTransaction_getMovementList was returning the total price as "xxx_quantity" on brains. It now returns quantity, price and total_price respectivly.

2008-02-14 fabien
* correct some script : context was used instead paysheet, so results were wrong

2008-01-24 fabien
* set version number to 2.1 : this bt is the second version of payroll.

2007-10-16 fabien
* add Pay Sheet Model | Pay Sheet Model Ratio Line in allowed content type

2007-10-12 fabien
* Initial revision